--- a/config/coreboot-nitropad-ns50.config
+++ b/config/coreboot-nitropad-ns50.config
@@ -14,12 +14,14 @@ CONFIG_COMPILER_GCC=y
 CONFIG_ARCH_SUPPORTS_CLANG=y
 # CONFIG_ANY_TOOLCHAIN is not set
 # CONFIG_CCACHE is not set
+# CONFIG_IWYU is not set
 # CONFIG_FMD_GENPARSER is not set
 # CONFIG_UTIL_GENPARSER is not set
 # CONFIG_OPTION_BACKEND_NONE is not set
 CONFIG_USE_OPTION_TABLE=y
 # CONFIG_STATIC_OPTION_TABLE is not set
-CONFIG_COMPRESS_RAMSTAGE=y
+CONFIG_COMPRESS_RAMSTAGE_LZMA=y
+# CONFIG_COMPRESS_RAMSTAGE_LZ4 is not set
 CONFIG_INCLUDE_CONFIG_FILE=y
 CONFIG_COLLECT_TIMESTAMPS=y
 # CONFIG_TIMESTAMPS_ON_CONSOLE is not set
@@ -41,6 +43,12 @@ CONFIG_BOOTSPLASH_CONVERT_RESIZE=y
 CONFIG_BOOTSPLASH_CONVERT_RESOLUTION="1920x1080"
 # CONFIG_BOOTSPLASH_CONVERT_COLORSWAP is not set
 # CONFIG_FW_CONFIG is not set
+
+#
+# Software Bill Of Materials (SBOM)
+#
+# CONFIG_SBOM is not set
+# end of Software Bill Of Materials (SBOM)
 # end of General setup
 
 #
@@ -58,30 +66,28 @@ CONFIG_BOOTSPLASH_CONVERT_RESOLUTION="1920x1080"
 # CONFIG_VENDOR_APPLE is not set
 # CONFIG_VENDOR_ASROCK is not set
 # CONFIG_VENDOR_ASUS is not set
-# CONFIG_VENDOR_BAP is not set
 # CONFIG_VENDOR_BIOSTAR is not set
 # CONFIG_VENDOR_BOSTENTECH is not set
+# CONFIG_VENDOR_BYTEDANCE is not set
 # CONFIG_VENDOR_CAVIUM is not set
 # CONFIG_VENDOR_CLEVO is not set
 # CONFIG_VENDOR_COMPULAB is not set
 # CONFIG_VENDOR_DELL is not set
-# CONFIG_VENDOR_ELMEX is not set
 # CONFIG_VENDOR_EMULATION is not set
 # CONFIG_VENDOR_EXAMPLE is not set
 # CONFIG_VENDOR_FACEBOOK is not set
 # CONFIG_VENDOR_FOXCONN is not set
 # CONFIG_VENDOR_GETAC is not set
 # CONFIG_VENDOR_GIGABYTE is not set
-# CONFIG_VENDOR_GIZMOSPHERE is not set
 # CONFIG_VENDOR_GOOGLE is not set
 # CONFIG_VENDOR_HP is not set
 # CONFIG_VENDOR_IBASE is not set
+# CONFIG_VENDOR_IBM is not set
 # CONFIG_VENDOR_INTEL is not set
-# CONFIG_VENDOR_JETWAY is not set
+# CONFIG_VENDOR_INVENTEC is not set
 # CONFIG_VENDOR_KONTRON is not set
 # CONFIG_VENDOR_LENOVO is not set
 # CONFIG_VENDOR_LIBRETREND is not set
-# CONFIG_VENDOR_LIPPERT is not set
 # CONFIG_VENDOR_MSI is not set
 CONFIG_VENDOR_NOVACUSTOM=y
 # CONFIG_VENDOR_OCP is not set
@@ -97,7 +103,6 @@ CONFIG_VENDOR_NOVACUSTOM=y
 # CONFIG_VENDOR_RODA is not set
 # CONFIG_VENDOR_SAMSUNG is not set
 # CONFIG_VENDOR_SAPPHIRE is not set
-# CONFIG_VENDOR_SCALEWAY is not set
 # CONFIG_VENDOR_SIEMENS is not set
 # CONFIG_VENDOR_SIFIVE is not set
 # CONFIG_VENDOR_STARLABS is not set
@@ -121,16 +126,16 @@ CONFIG_ONBOARD_VGA_IS_PRIMARY=y
 # CONFIG_POST_DEVICE is not set
 # CONFIG_POST_IO is not set
 CONFIG_UART_FOR_CONSOLE=0
-# CONFIG_VBOOT is not set
-CONFIG_VBOOT_VBNV_OFFSET=0x56
-CONFIG_VARIANT_DIR="ns50pu"
 CONFIG_DEVICETREE="devicetree.cb"
+# CONFIG_VBOOT is not set
+CONFIG_VBOOT_VBNV_OFFSET=0x28
+CONFIG_VARIANT_DIR="ns50pu"
+CONFIG_OVERRIDE_DEVICETREE="variants/$(CONFIG_VARIANT_DIR)/overridetree.cb"
 # CONFIG_VGA_BIOS is not set
 CONFIG_MAINBOARD_SMBIOS_MANUFACTURER="Nitrokey"
 CONFIG_INTEL_GMA_VBT_FILE="src/mainboard/$(MAINBOARDDIR)/variants/$(VARIANT_DIR)/data.vbt"
 # CONFIG_DISABLE_HECI1_AT_PRE_BOOT is not set
-CONFIG_PRERAM_CBMEM_CONSOLE_SIZE=0x2000
-CONFIG_OVERRIDE_DEVICETREE="variants/$(CONFIG_VARIANT_DIR)/overridetree.cb"
+CONFIG_PRERAM_CBMEM_CONSOLE_SIZE=0x4000
 CONFIG_CMOS_DEFAULT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.default"
 CONFIG_CMOS_LAYOUT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.layout"
 CONFIG_BOOT_DEVICE_SPI_FLASH_BUS=0
@@ -141,14 +146,15 @@ CONFIG_CONSOLE_POST=y
 # CONFIG_USE_PM_ACPI_TIMER is not set
 CONFIG_TPM_PIRQ=0x27
 # CONFIG_SOC_INTEL_CSE_SEND_EOP_EARLY is not set
+CONFIG_VBOOT_FWID_VERSION="$(CONFIG_LOCALVERSION)"
 CONFIG_EC_SYSTEM76_EC_BAT_THRESHOLDS=y
+CONFIG_ECAM_MMCONF_BASE_ADDRESS=0xc0000000
+CONFIG_ECAM_MMCONF_BUS_NUMBER=256
 CONFIG_MEMLAYOUT_LD_FILE="src/arch/x86/memlayout.ld"
 CONFIG_DCACHE_RAM_BASE=0xfef00000
 CONFIG_DCACHE_RAM_SIZE=0xc0000
 CONFIG_C_ENV_BOOTBLOCK_SIZE=0x40000
 CONFIG_DCACHE_BSP_STACK_SIZE=0x80400
-CONFIG_ECAM_MMCONF_BASE_ADDRESS=0xc0000000
-CONFIG_ECAM_MMCONF_BUS_NUMBER=256
 CONFIG_MAX_ACPI_TABLE_SIZE_KB=144
 CONFIG_HAVE_INTEL_FIRMWARE=y
 CONFIG_MRC_SETTINGS_CACHE_SIZE=0x10000
@@ -156,7 +162,11 @@ CONFIG_DRIVERS_INTEL_WIFI=y
 CONFIG_IFD_BIN_PATH="../nitrokey-blobs/nitropad-ns51/flashdescriptor-HAP.bin"
 CONFIG_ME_BIN_PATH="../nitrokey-blobs/nitropad-ns51/me.bin"
 CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x20000
+CONFIG_VBT_DATA_SIZE_KB=9
+CONFIG_CARDBUS_PLUGIN_SUPPORT=y
+CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
 # CONFIG_USE_LEGACY_8254_TIMER is not set
+# CONFIG_DEBUG_SMI is not set
 CONFIG_HAVE_IFD_BIN=y
 CONFIG_PCIEXP_HOTPLUG_BUSES=42
 CONFIG_PCIEXP_HOTPLUG_MEM=0xc200000
@@ -176,11 +186,15 @@ CONFIG_BOARD_NOVACUSTOM_NS5X_ADLP=y
 # CONFIG_BOARD_NOVACUSTOM_NV4X_TGLU is not set
 # CONFIG_BOARD_NOVACUSTOM_NS5X_TGLU is not set
 CONFIG_POWER_STATE_DEFAULT_ON_AFTER_FAILURE=y
+CONFIG_D3COLD_SUPPORT=y
+CONFIG_PCIEXP_ASPM=y
 CONFIG_PCIEXP_L1_SUB_STATE=y
 CONFIG_PCIEXP_CLK_PM=y
 # CONFIG_DRIVERS_UART_8250IO is not set
+CONFIG_PC_CMOS_BASE_PORT_BANK1=0x72
 CONFIG_HEAP_SIZE=0x10000
 CONFIG_EC_GPE_SCI=0x50
+CONFIG_TPM_MEASURED_BOOT=y
 CONFIG_LINUX_COMMAND_LINE="quiet loglevel=2"
 CONFIG_BOARD_ROMSIZE_KB_32768=y
 # CONFIG_COREBOOT_ROMSIZE_KB_256 is not set
@@ -215,8 +229,9 @@ CONFIG_SYSTEM_TYPE_LAPTOP=y
 #
 # SoC
 #
-CONFIG_ARCH_ALL_STAGES_X86=y
 CONFIG_CHIPSET_DEVICETREE="soc/intel/alderlake/chipset.cb"
+CONFIG_FSP_M_FILE="$(obj)/Fsp_M.fd"
+CONFIG_FSP_S_FILE="$(obj)/Fsp_S.fd"
 CONFIG_CBFS_MCACHE_SIZE=0x4000
 CONFIG_ROMSTAGE_ADDR=0x2000000
 CONFIG_FSP_TEMP_RAM_SIZE=0x20000
@@ -229,10 +244,7 @@ CONFIG_ACPI_BERT=y
 CONFIG_ACPI_BERT_SIZE=0x10000
 CONFIG_DRIVERS_I2C_DESIGNWARE_CLOCK_MHZ=133
 CONFIG_VBOOT_HASH_BLOCK_SIZE=0x1000
-CONFIG_CPU_SPECIFIC_OPTIONS=y
-CONFIG_FSP_M_FILE="$(obj)/Fsp_M.fd"
-CONFIG_FSP_S_FILE="$(obj)/Fsp_S.fd"
-CONFIG_ACPI_CPU_STRING="\\_SB.CP%02d"
+CONFIG_ACPI_CPU_STRING="CP%02X"
 CONFIG_STACK_SIZE=0x2000
 CONFIG_SOC_INTEL_ALDERLAKE=y
 CONFIG_SOC_INTEL_ALDERLAKE_PCH_P=y
@@ -250,13 +262,15 @@ CONFIG_MAX_PCIE_CLOCK_SRC=10
 CONFIG_MAX_PCIE_CLOCK_REQ=10
 CONFIG_PCR_BASE_ADDRESS=0xfd000000
 CONFIG_CPU_BCLK_MHZ=100
+CONFIG_SOC_INTEL_PERFORMANCE_CORE_SCALE_FACTOR=127
+CONFIG_SOC_INTEL_EFFICIENT_CORE_SCALE_FACTOR=100
 CONFIG_SOC_INTEL_COMMON_BLOCK_GSPI_CLOCK_MHZ=120
 CONFIG_CPU_XTAL_HZ=38400000
 CONFIG_SOC_INTEL_UFS_CLK_FREQ_HZ=19200000
 CONFIG_SOC_INTEL_COMMON_BLOCK_GSPI_MAX=7
 CONFIG_SOC_INTEL_I2C_DEV_MAX=8
+# CONFIG_ENABLE_SATA_TEST_MODE is not set
 CONFIG_SOC_INTEL_UART_DEV_MAX=7
-CONFIG_VBT_DATA_SIZE_KB=9
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_M_VAL=0x25a
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_N_VAL=0x7fff
 CONFIG_FSP_HEADER_PATH="3rdparty/fsp/AlderLakeFspBinPkg/Client/AlderLakeP/Include/"
@@ -266,8 +280,7 @@ CONFIG_DATA_BUS_WIDTH=128
 CONFIG_DIMMS_PER_CHANNEL=2
 CONFIG_MRC_CHANNEL_WIDTH=16
 CONFIG_ACPI_ADL_IPU_ES_SUPPORT=y
-CONFIG_USE_FSP_MP_INIT=y
-# CONFIG_USE_COREBOOT_MP_INIT is not set
+CONFIG_ALDERLAKE_ENABLE_SOC_WORKAROUND=y
 CONFIG_SI_DESC_REGION="SI_DESC"
 CONFIG_SI_DESC_REGION_SZ=4096
 # CONFIG_BUILDING_WITH_DEBUG_FSP is not set
@@ -275,14 +288,20 @@ CONFIG_INTEL_GMA_BCLV_OFFSET=0xc8258
 CONFIG_INTEL_GMA_BCLV_WIDTH=32
 CONFIG_INTEL_GMA_BCLM_OFFSET=0xc8254
 CONFIG_INTEL_GMA_BCLM_WIDTH=32
+CONFIG_FSP_PUBLISH_MBP_HOB=y
+# CONFIG_INCLUDE_HSPHY_IN_FMAP is not set
+CONFIG_HSPHY_FW_MAX_SIZE=0x8000
 CONFIG_MAX_HECI_DEVICES=6
 CONFIG_BOOTBLOCK_IN_CBFS=y
-CONFIG_PCIEXP_ASPM=y
+CONFIG_HAVE_PAM0_REGISTER=y
 CONFIG_PCIEXP_COMMON_CLOCK=y
 CONFIG_CPU_INTEL_NUM_FIT_ENTRIES=4
 CONFIG_SOC_INTEL_GFX_FRAMEBUFFER_OFFSET=0x0
-CONFIG_UART_PCI_ADDR=0x0
+CONFIG_PCIE_LTR_MAX_SNOOP_LATENCY=0x1003
+CONFIG_PCIE_LTR_MAX_NO_SNOOP_LATENCY=0x1003
+CONFIG_INTEL_TME=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_P2SB=y
+CONFIG_FIXED_SMBUS_IO_BASE=0xefa0
 CONFIG_CBFS_CACHE_ALIGN=8
 CONFIG_SOC_INTEL_COMMON=y
 
@@ -298,10 +317,14 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_ACPI_PEP_LPM_REQ=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CRASHLOG=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_ACPI_CPPC=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_ACPI_CPU_HYBRID=y
+CONFIG_SOC_INTEL_UFS_OCP_TIMER_DISABLE=y
+CONFIG_SOC_INTEL_UFS_LTR_DISQUALIFY=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CHIP_CONFIG=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CNVI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CPU=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CPU_MPINIT=y
+CONFIG_USE_FSP_FEATURE_PROGRAM_ON_APS=y
+# CONFIG_USE_COREBOOT_MP_INIT is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_CPU_SMMRELOCATE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CAR=y
 CONFIG_INTEL_CAR_NEM_ENHANCED=y
@@ -310,13 +333,14 @@ CONFIG_COS_MAPPED_TO_MSB=y
 CONFIG_CAR_HAS_L3_PROTECTED_WAYS=y
 CONFIG_USE_INTEL_FSP_TO_CALL_COREBOOT_PUBLISH_MP_PPI=y
 CONFIG_CPU_SUPPORTS_INTEL_TME=y
-CONFIG_INTEL_TME=y
+# CONFIG_TME_KEY_REGENERATION_ON_WARM_BOOT is not set
 CONFIG_CPU_SUPPORTS_PM_TIMER_EMULATION=y
 CONFIG_HAVE_HYPERTHREADING=y
 CONFIG_FSP_HYPERTHREADING=y
+# CONFIG_INTEL_KEYLOCKER is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_CSE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_HECI1_DISABLE_USING_PMC_IPC=y
-CONFIG_SOC_INTEL_CSE_HAVE_HAP=y
+CONFIG_SOC_INTEL_CSE_SEND_EOP_LATE=y
 CONFIG_SOC_INTEL_CSE_FMAP_NAME="SI_ME"
 CONFIG_SOC_INTEL_CSE_RW_A_FMAP_NAME="ME_RW_A"
 CONFIG_SOC_INTEL_CSE_RW_B_FMAP_NAME="ME_RW_B"
@@ -330,6 +354,9 @@ CONFIG_SOC_INTEL_CSE_IOM_CBFS_NAME="cse_iom"
 CONFIG_SOC_INTEL_CSE_IOM_CBFS_FILE=""
 CONFIG_SOC_INTEL_CSE_NPHY_CBFS_NAME="cse_nphy"
 CONFIG_SOC_INTEL_CSE_NPHY_CBFS_FILE=""
+CONFIG_SOC_INTEL_CSE_HAVE_SPEC_SUPPORT=y
+CONFIG_SOC_INTEL_COMMON_BLOCK_ME_SPEC_16=y
+CONFIG_ME_SPEC=16
 CONFIG_SOC_INTEL_COMMON_BLOCK_DSP=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_DTT=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_FAST_SPI=y
@@ -354,6 +381,8 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_LPC=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_LPC_MIRROR_TO_GPMR=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_LPSS=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_MEMINIT=y
+CONFIG_SOC_INTEL_COMMON_BLOCK_OC_WDT=y
+# CONFIG_SOC_INTEL_COMMON_OC_WDT_ENABLE is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_BASE_P2SB=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_PCIE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_PCIE_RTD3=y
@@ -367,7 +396,6 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_POWER_LIMIT=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_RTC=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SATA=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SMBUS=y
-CONFIG_FIXED_SMBUS_IO_BASE=0xefa0
 CONFIG_SOC_INTEL_COMMON_BLOCK_TCO=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_TCO_ENABLE_THROUGH_SMBUS=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SMM=y
@@ -376,8 +404,10 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_SMM_IO_TRAP=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SMM_S5_DELAY_MS=0
 CONFIG_SOC_INTEL_COMMON_BLOCK_SPI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SA=y
+CONFIG_DOMAIN_RESOURCE_32BIT_LIMIT=0xe0000000
 CONFIG_SOC_INTEL_COMMON_BLOCK_TCSS=y
 # CONFIG_ENABLE_TCSS_DISPLAY_DETECTION is not set
+# CONFIG_ENABLE_TCSS_USB_DETECTION is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_THERMAL=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_THERMAL_BEHIND_PMC=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_TIMER=y
@@ -387,6 +417,8 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_USB4=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_PCIE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_XHCI=y
 CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
+CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
+# CONFIG_ENABLE_EARLY_DMA_PROTECTION is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI_ELOG=y
@@ -398,12 +430,14 @@ CONFIG_SOC_INTEL_COMMON_PCH_CLIENT=y
 CONFIG_SOC_INTEL_COMMON_PCH_BASE=y
 CONFIG_SOC_INTEL_COMMON_PCH_LOCKDOWN=y
 CONFIG_PCH_SPECIFIC_BASE_OPTIONS=y
+CONFIG_PCH_SPECIFIC_DISCRETE_OPTIONS=y
 CONFIG_PCH_SPECIFIC_CLIENT_OPTIONS=y
 
 #
 # Intel SoC Common coreboot stages and non-IP blocks
 #
 CONFIG_SOC_INTEL_COMMON_BASECODE=y
+CONFIG_SOC_INTEL_COMMON_BASECODE_RAMTOP=y
 CONFIG_SOC_INTEL_COMMON_RESET=y
 CONFIG_SOC_INTEL_COMMON_ACPI_WAKE_SOURCE=y
 CONFIG_PAVP=y
@@ -415,14 +449,13 @@ CONFIG_SOC_INTEL_CRASHLOG=y
 #
 # CPU
 #
-CONFIG_SSE2=y
 CONFIG_CPU_INTEL_FIRMWARE_INTERFACE_TABLE=y
 CONFIG_CPU_INTEL_COMMON=y
 CONFIG_ENABLE_VMX=y
 CONFIG_SET_IA32_FC_LOCK_BIT=y
 CONFIG_SET_MSR_AESNI_LOCK_BIT=y
+CONFIG_CPU_INTEL_COMMON_VOLTAGE=y
 CONFIG_CPU_INTEL_COMMON_SMM=y
-CONFIG_MICROCODE_UPDATE_PRE_RAM=y
 CONFIG_PARALLEL_MP=y
 CONFIG_PARALLEL_MP_AP_WORK=y
 CONFIG_XAPIC_ONLY=y
@@ -431,13 +464,14 @@ CONFIG_XAPIC_ONLY=y
 # CONFIG_X2APIC_LATE_WORKAROUND is not set
 CONFIG_UDELAY_TSC=y
 CONFIG_TSC_MONOTONIC_TIMER=y
-CONFIG_LOGICAL_CPUS=y
+CONFIG_X86_CLFLUSH_CAR=y
 CONFIG_HAVE_SMI_HANDLER=y
 CONFIG_SMM_TSEG=y
-CONFIG_SMM_STUB_STACK_SIZE=0x400
-CONFIG_CPU_INFO_V2=y
+CONFIG_SMM_PCI_RESOURCE_STORE_NUM_SLOTS=8
+CONFIG_AP_STACK_SIZE=0x800
 CONFIG_SMP=y
 CONFIG_SSE=y
+CONFIG_SSE2=y
 CONFIG_SUPPORT_CPU_UCODE_IN_CBFS=y
 CONFIG_USE_CPU_MICROCODE_CBFS_BINS=y
 CONFIG_CPU_MICROCODE_CBFS_DEFAULT_BINS=y
@@ -468,9 +502,8 @@ CONFIG_RCBA_LENGTH=0x4000
 #
 # Embedded Controllers
 #
+CONFIG_EC_ACPI=y
 CONFIG_EC_SYSTEM76_EC=y
-CONFIG_EC_SYSTEM76_EC_COLOR_KEYBOARD=y
-CONFIG_EC_SYSTEM76_EC_ACPI_DEVICE_HID="17761776"
 
 #
 # Intel Firmware
@@ -481,12 +514,13 @@ CONFIG_HAVE_ME_BIN=y
 # CONFIG_DO_NOT_TOUCH_DESCRIPTOR_REGION is not set
 # CONFIG_LOCK_MANAGEMENT_ENGINE is not set
 CONFIG_UNLOCK_FLASH_REGIONS=y
+CONFIG_BIOS_VENDOR="3mdeb"
 CONFIG_UDK_BASE=y
 CONFIG_UDK_202005_BINDING=y
 CONFIG_UDK_2013_VERSION=2013
 CONFIG_UDK_2017_VERSION=2017
 CONFIG_UDK_202005_VERSION=202005
-CONFIG_UDK_202111_VERSION=202111
+CONFIG_UDK_202302_VERSION=202302
 CONFIG_UDK_VERSION=202005
 CONFIG_ARCH_X86=y
 CONFIG_ARCH_BOOTBLOCK_X86_32=y
@@ -496,7 +530,6 @@ CONFIG_ARCH_POSTCAR_X86_32=y
 CONFIG_ARCH_RAMSTAGE_X86_32=y
 CONFIG_ARCH_ALL_STAGES_X86_32=y
 CONFIG_X86_CUSTOM_BOOTMEDIA=y
-CONFIG_NUM_IPI_STARTS=2
 CONFIG_PC80_SYSTEM=y
 CONFIG_HAVE_CMOS_DEFAULT=y
 CONFIG_POSTCAR_STAGE=y
@@ -509,6 +542,7 @@ CONFIG_DEBUG_HW_BREAKPOINTS=y
 CONFIG_DEBUG_HW_BREAKPOINTS_IN_ALL_STAGES=y
 CONFIG_DEBUG_NULL_DEREF_BREAKPOINTS=y
 CONFIG_DEBUG_NULL_DEREF_BREAKPOINTS_IN_ALL_STAGES=y
+# CONFIG_DUMP_SMBIOS_TYPE17 is not set
 # end of Chipset
 
 #
@@ -519,6 +553,7 @@ CONFIG_HAVE_FSP_GOP=y
 # CONFIG_VGA_ROM_RUN is not set
 CONFIG_RUN_FSP_GOP=y
 # CONFIG_NO_GFX_INIT is not set
+CONFIG_NO_EARLY_GFX_INIT=y
 
 #
 # Display
@@ -531,7 +566,6 @@ CONFIG_BOOTSPLASH=y
 CONFIG_PCI=y
 CONFIG_ECAM_MMCONF_SUPPORT=y
 CONFIG_PCIX_PLUGIN_SUPPORT=y
-CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_AZALIA_PLUGIN_SUPPORT=y
 CONFIG_AZALIA_LOCK_DOWN_R_WO_GCAP=y
 CONFIG_PCIEXP_PLUGIN_SUPPORT=y
@@ -540,8 +574,11 @@ CONFIG_PCI_ALLOW_BUS_MASTER=y
 CONFIG_PCI_SET_BUS_MASTER_PCI_BRIDGES=y
 CONFIG_PCI_ALLOW_BUS_MASTER_ANY_DEVICE=y
 # CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS is not set
+# CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR is not set
 CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G=y
 CONFIG_PCIEXP_HOTPLUG_IO=0x2000
+CONFIG_FIRMWARE_CONNECTION_MANAGER=y
+# CONFIG_SOFTWARE_CONNECTION_MANAGER is not set
 # CONFIG_EARLY_PCI_BRIDGE is not set
 CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
 CONFIG_SUBSYSTEM_DEVICE_ID=0x0000
@@ -549,7 +586,7 @@ CONFIG_INTEL_GMA_HAVE_VBT=y
 CONFIG_INTEL_GMA_ADD_VBT=y
 # CONFIG_SOFTWARE_I2C is not set
 CONFIG_I2C_TRANSFER_TIMEOUT_US=500000
-CONFIG_RESOURCE_ALLOCATOR_V4=y
+CONFIG_RESOURCE_ALLOCATION_TOP_DOWN=y
 # end of Devices
 
 #
@@ -561,10 +598,12 @@ CONFIG_CRB_TPM_BASE_ADDRESS=0xfed40000
 CONFIG_CACHE_MRC_SETTINGS=y
 CONFIG_MRC_SETTINGS_PROTECT=y
 CONFIG_SMMSTORE=y
+# CONFIG_SMMSTORE_V2 is not set
+CONFIG_SMMSTORE_SIZE=0x40000
 CONFIG_SPI_FLASH=y
 CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP=y
 CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP_EARLY=y
-CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
+CONFIG_SPI_FLASH_SMM=y
 # CONFIG_SPI_FLASH_NO_FAST_READ is not set
 CONFIG_TPM_INIT_RAMSTAGE=y
 # CONFIG_TPM_PPI is not set
@@ -575,6 +614,7 @@ CONFIG_DRIVERS_UART_8250MEM_32=y
 # CONFIG_VPD is not set
 CONFIG_DRIVERS_GENERIC_BAYHUB_LV2=y
 # CONFIG_DRIVERS_GENERIC_CBFS_SERIAL is not set
+# CONFIG_DRIVERS_GENERIC_CBFS_UUID is not set
 # CONFIG_DRIVERS_GENESYSLOGIC_GL9750 is not set
 # CONFIG_DRIVERS_GENESYSLOGIC_GL9755 is not set
 # CONFIG_DRIVERS_GENESYSLOGIC_GL9763E is not set
@@ -608,6 +648,7 @@ CONFIG_FSPS_USE_MULTI_PHASE_INIT=y
 CONFIG_FSP_USES_CB_DEBUG_EVENT_HANDLER=y
 # CONFIG_DISPLAY_FSP_TIMESTAMPS is not set
 CONFIG_FSP_ENABLE_SERIAL_DEBUG=y
+CONFIG_FSP_MULTIPHASE_SI_INIT_RETURN_BROKEN=y
 CONFIG_INTEL_GMA_ACPI=y
 CONFIG_INTEL_GMA_OPREGION_2_1=y
 CONFIG_DRIVERS_INTEL_PMC=y
@@ -615,6 +656,7 @@ CONFIG_DRIVERS_INTEL_PMC=y
 # CONFIG_DRIVERS_PS2_KEYBOARD is not set
 CONFIG_DRIVERS_MC146818=y
 # CONFIG_USE_PC_CMOS_ALTCENTURY is not set
+CONFIG_PC_CMOS_BASE_PORT_BANK0=0x70
 CONFIG_MEMORY_MAPPED_TPM=y
 CONFIG_TPM_TIS_BASE_ADDRESS=0xfed40000
 # CONFIG_DRIVERS_SIL_3114 is not set
@@ -650,8 +692,17 @@ CONFIG_TPM=y
 CONFIG_MAINBOARD_HAS_TPM2=y
 # CONFIG_DEBUG_TPM is not set
 # CONFIG_TPM_RDRESP_NEED_DELAY is not set
-CONFIG_TPM_MEASURED_BOOT=y
+# CONFIG_TPM_LOG_CB is not set
+CONFIG_TPM_LOG_TPM2=y
+# CONFIG_TPM_HASH_SHA1 is not set
+CONFIG_TPM_HASH_SHA256=y
+# CONFIG_TPM_HASH_SHA384 is not set
+# CONFIG_TPM_HASH_SHA512 is not set
 CONFIG_TPM_MEASURED_BOOT_RUNTIME_DATA=""
+CONFIG_PCR_BOOT_MODE=1
+CONFIG_PCR_HWID=1
+CONFIG_PCR_SRTM=2
+CONFIG_PCR_RUNTIME_DATA=3
 # end of Trusted Platform Module
 
 #
@@ -661,6 +712,7 @@ CONFIG_PLATFORM_HAS_DRAM_CLEAR=y
 # CONFIG_SECURITY_CLEAR_DRAM_ON_REGULAR_BOOT is not set
 # end of Memory initialization
 
+CONFIG_INTEL_TXT_LIB=y
 # CONFIG_INTEL_TXT is not set
 # CONFIG_STM is not set
 # CONFIG_INTEL_CBNT_SUPPORT is not set
@@ -673,6 +725,8 @@ CONFIG_BOOTMEDIA_LOCK_NONE=y
 CONFIG_ACPI_HAVE_PCAT_8259=y
 CONFIG_ACPI_INTEL_HARDWARE_SLEEP_VALUES=y
 CONFIG_ACPI_SOC_NVS=y
+CONFIG_ACPI_CUSTOM_MADT=y
+CONFIG_ACPI_COMMON_MADT_IOAPIC=y
 CONFIG_HAVE_ACPI_TABLES=y
 CONFIG_ACPI_LPIT=y
 CONFIG_BOOT_DEVICE_SPI_FLASH=y
@@ -692,6 +746,7 @@ CONFIG_FIXED_UART_FOR_CONSOLE=y
 CONFIG_CONSOLE_CBMEM=y
 # CONFIG_CONSOLE_CBMEM_DUMP_TO_UART is not set
 # CONFIG_CONSOLE_SPI_FLASH is not set
+# CONFIG_CONSOLE_I2C_SMBUS is not set
 # CONFIG_CONSOLE_SYSTEM76_EC is not set
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_8 is not set
 CONFIG_DEFAULT_CONSOLE_LOGLEVEL_7=y
@@ -709,6 +764,7 @@ CONFIG_CONSOLE_USE_ANSI_ESCAPES=y
 CONFIG_HWBASE_DEBUG_CB=y
 # end of Console
 
+CONFIG_ACPI_S1_NOT_SUPPORTED=y
 CONFIG_HAVE_ACPI_RESUME=y
 CONFIG_RESUME_PATH_SAME_AS_BOOT=y
 CONFIG_HAVE_MONOTONIC_TIMER=y
@@ -734,13 +790,12 @@ CONFIG_MAINBOARD_SERIAL_NUMBER="123456789"
 # CONFIG_PAYLOAD_LINUXBOOT is not set
 # CONFIG_PAYLOAD_SEABIOS is not set
 # CONFIG_PAYLOAD_UBOOT is not set
-# CONFIG_PAYLOAD_YABITS is not set
 # CONFIG_PAYLOAD_EDK2 is not set
 CONFIG_PAYLOAD_LINUX=y
 CONFIG_PAYLOAD_FILE="@BOARD_BUILD_DIR@/bzImage"
-CONFIG_LINUX_INITRD="@BOARD_BUILD_DIR@/initrd.cpio.xz"
 CONFIG_PAYLOAD_OPTIONS=""
 # CONFIG_PXE is not set
+CONFIG_LINUX_INITRD="@BOARD_BUILD_DIR@/initrd.cpio.xz"
 CONFIG_COMPRESS_SECONDARY_PAYLOAD=y
 
 #
@@ -772,6 +827,7 @@ CONFIG_COMPRESS_SECONDARY_PAYLOAD=y
 # CONFIG_DISPLAY_FSP_HEADER is not set
 # CONFIG_VERIFY_HOBS is not set
 CONFIG_DISPLAY_FSP_VERSION_INFO=y
+# CONFIG_ENABLE_FSP_ERROR_INFO is not set
 CONFIG_HAVE_GPIO_SNAPSHOT_VERIFY_SUPPORT=y
 # CONFIG_CHECK_GPIO_CONFIG_CHANGES is not set
 
@@ -787,7 +843,6 @@ CONFIG_HAVE_DEBUG_RAM_SETUP=y
 # CONFIG_DEBUG_RAM_SETUP is not set
 CONFIG_HAVE_DEBUG_SMBUS=y
 # CONFIG_DEBUG_SMBUS is not set
-# CONFIG_DEBUG_SMI is not set
 # CONFIG_DEBUG_MALLOC is not set
 # CONFIG_DEBUG_CONSOLE_INIT is not set
 # CONFIG_DEBUG_SPI_FLASH is not set
@@ -795,9 +850,11 @@ CONFIG_HAVE_DEBUG_SMBUS=y
 # CONFIG_DEBUG_ADA_CODE is not set
 CONFIG_HAVE_EM100_SUPPORT=y
 # CONFIG_EM100 is not set
+# CONFIG_DEBUG_ACPICA_COMPATIBLE is not set
 # end of Debugging
 
 CONFIG_SPD_READ_BY_WORD=y
+CONFIG_DECOMPRESS_OFAST=y
 CONFIG_WARNINGS_ARE_ERRORS=y
 CONFIG_MAX_REBOOT_CNT=3
 CONFIG_RELOCATABLE_MODULES=y
