--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,14 +219,6 @@ workflows:
           requires:
             - prep_env
 
-      # coreboot purism
-      - build_and_persist:
-          name: librem_14
-          target: librem_14
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
       # coreboot nitropad
       # Nitropads depending on x230-hotp-maximized cache since kernel is 6.x and coreboot is git is unshared
       # We use nitropad's coreboot's fork crossgcc
@@ -261,7 +253,7 @@ workflows:
       - save_cache:
           requires:
             - talos-2
-            - librem_14
+            - x230-hotp-maximized
 
       #
       # Those onboarding new boards should add their entries below.
@@ -433,46 +425,53 @@ workflows:
       # coreboot purism
       # librem boards
       - build:
+          name: librem_14
+          target: librem_14
+          subcommand: ""
+          requires:
+            - x230-hotp-maximized
+    
+      - build:
           name: librem_13v2
           target: librem_13v2
           subcommand: ""
           requires:
-            - librem_14
+            - x230-hotp-maximized
 
       - build:
           name: librem_15v3
           target: librem_15v3
           subcommand: ""
           requires:
-            - librem_14
+            - x230-hotp-maximized
 
       - build:
           name: librem_13v4
           target: librem_13v4
           subcommand: ""
           requires:
-            - librem_14
+            - x230-hotp-maximized
 
       - build:
           name: librem_15v4
           target: librem_15v4
           subcommand: ""
           requires:
-            - librem_14
+            - x230-hotp-maximized
 
       - build:
           name: librem_mini
           target: librem_mini
           subcommand: ""
           requires:
-            - librem_14
+            - x230-hotp-maximized
 
       - build:
           name: librem_mini_v2
           target: librem_mini_v2
           subcommand: ""
           requires:
-            - librem_14
+            - x230-hotp-maximized
 
       # dasharo release
       - build:
